# svg-dump

./: Cargo.toml
src/: main.rs
