[package]
name = "svg-dump"
version = "0.2.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.1"
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }

[dependencies.allsorts]
path = "../prince/src/fonts/allsorts"
